--- a/package.json
+++ b/package.json
@@ -1,22 +1,11 @@
 {
-  "name": "vercel-proxy",
+  "name": "gfork-mirror",
   "version": "1.0.0",
-  "description": "A proxy server ",
-  "main": "api/proxy.js",
   "scripts": {
-    "start": "vercel dev",
-    "deploy": "vercel deploy --prod"
+    "dev": "vercel dev"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "http-proxy-middleware": "^2.0.6",
-    "cors": "^2.8.5"
-  },
-  "devDependencies": {
-    "vercel": "^28.0.0"
-  },
-  "engines": {
-    "node": "18.x"
-  },
-  "license": "MIT"
+    "@vercel/node": "^2.15.0",
+    "node-fetch": "^3.3.2"
+  }
 }
