--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "gfork-mirror",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vercel dev"
   },
   "dependencies": {
     "@vercel/node": "^2.15.0",
     "node-fetch": "^3.3.2"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
